--- a/fitsmeright/Resources/Layouts/V/PostView.xib
+++ b/fitsmeright/Resources/Layouts/V/PostView.xib
@@ -28,11 +28,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="639"/>
+            <rect key="frame" x="0.0" y="0.0" width="400" height="649"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Sfb-hn-OPa">
-                    <rect key="frame" x="20" y="575" width="172" height="44"/>
+                    <rect key="frame" x="20" y="585" width="172" height="44"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLq-Ob-63m">
                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
@@ -60,14 +60,14 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chP-4o-a0U" userLabel="Line View">
-                    <rect key="frame" x="20" y="569" width="360" height="1"/>
+                    <rect key="frame" x="20" y="579" width="360" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="1d4-VV-CvN"/>
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="fsk-rY-tCc">
-                    <rect key="frame" x="20" y="532" width="144.5" height="30"/>
+                    <rect key="frame" x="20" y="542" width="144.5" height="30"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 Like" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5V-QW-lCb">
                             <rect key="frame" x="0.0" y="0.0" width="39" height="30"/>
@@ -87,21 +87,21 @@
                     </constraints>
                 </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fua-Nd-Wvc" customClass="CreateTextView" customModule="fitsmeright" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="125" width="400" height="400"/>
+                    <rect key="frame" x="0.0" y="135" width="400" height="400"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMA-Ef-T7Q" customClass="CreatePostView" customModule="fitsmeright" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="125" width="400" height="400"/>
+                    <rect key="frame" x="0.0" y="135" width="400" height="400"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="KMA-Ef-T7Q" secondAttribute="height" multiplier="1:1" id="wzX-FC-Sh5"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kQ6-aC-Yic" userLabel="Info Container View">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="125"/>
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="135"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5t-eA-5Kc">
-                            <rect key="frame" x="10" y="90" width="380" height="25"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5t-eA-5Kc">
+                            <rect key="frame" x="20" y="100" width="360" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="ufC-GO-Pzp"/>
                             </constraints>
@@ -110,7 +110,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W4l-6w-mE1">
-                            <rect key="frame" x="360" y="5" width="35" height="35"/>
+                            <rect key="frame" x="345" y="20" width="35" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="W4l-6w-mE1" secondAttribute="height" multiplier="1:1" id="JZq-Yf-wVb"/>
                                 <constraint firstAttribute="height" constant="35" id="ZdL-6j-NIW"/>
@@ -119,16 +119,16 @@
                             <state key="normal" title=":"/>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nwx-2V-2ho">
-                            <rect key="frame" x="90" y="10" width="260" height="44"/>
+                            <rect key="frame" x="100" y="20" width="235" height="70"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLw-lL-kjE">
-                                    <rect key="frame" x="0.0" y="0.0" width="260" height="19.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLw-lL-kjE">
+                                    <rect key="frame" x="0.0" y="0.0" width="235" height="50"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slQ-DV-1FW">
-                                    <rect key="frame" x="0.0" y="29.5" width="260" height="14.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slQ-DV-1FW">
+                                    <rect key="frame" x="0.0" y="60" width="235" height="10"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -137,7 +137,7 @@
                             <viewLayoutGuide key="safeArea" id="e0B-re-hPg"/>
                         </stackView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kEC-Tw-UZa">
-                            <rect key="frame" x="10" y="10" width="70" height="70"/>
+                            <rect key="frame" x="20" y="20" width="70" height="70"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="kEC-Tw-UZa" secondAttribute="height" multiplier="1:1" id="96t-gO-Gfa"/>
@@ -145,24 +145,24 @@
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="0.98039215690000003" green="0.44705882349999998" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="W4l-6w-mE1" secondAttribute="trailing" constant="5" id="9Mg-Fd-STa"/>
-                        <constraint firstItem="kEC-Tw-UZa" firstAttribute="leading" secondItem="kQ6-aC-Yic" secondAttribute="leading" constant="10" id="G9e-Zt-M8I"/>
+                        <constraint firstAttribute="trailing" secondItem="W4l-6w-mE1" secondAttribute="trailing" constant="20" id="9Mg-Fd-STa"/>
+                        <constraint firstItem="kEC-Tw-UZa" firstAttribute="leading" secondItem="kQ6-aC-Yic" secondAttribute="leading" constant="20" id="G9e-Zt-M8I"/>
                         <constraint firstAttribute="bottom" secondItem="d5t-eA-5Kc" secondAttribute="bottom" constant="10" id="Mm0-JE-1N1"/>
-                        <constraint firstItem="kEC-Tw-UZa" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="10" id="Mww-3i-KqM"/>
-                        <constraint firstItem="W4l-6w-mE1" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="5" id="QN2-Zb-WfY"/>
-                        <constraint firstAttribute="trailing" secondItem="d5t-eA-5Kc" secondAttribute="trailing" constant="10" id="TG0-PJ-NxX"/>
+                        <constraint firstItem="kEC-Tw-UZa" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="20" id="Mww-3i-KqM"/>
+                        <constraint firstItem="W4l-6w-mE1" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="20" id="QN2-Zb-WfY"/>
+                        <constraint firstAttribute="trailing" secondItem="d5t-eA-5Kc" secondAttribute="trailing" constant="20" id="TG0-PJ-NxX"/>
                         <constraint firstItem="d5t-eA-5Kc" firstAttribute="top" secondItem="kEC-Tw-UZa" secondAttribute="bottom" constant="10" id="f7Z-iJ-zMi"/>
                         <constraint firstItem="nwx-2V-2ho" firstAttribute="leading" secondItem="kEC-Tw-UZa" secondAttribute="trailing" constant="10" id="hew-Cb-tc1"/>
-                        <constraint firstItem="d5t-eA-5Kc" firstAttribute="leading" secondItem="kQ6-aC-Yic" secondAttribute="leading" constant="10" id="kfT-DT-NW8"/>
+                        <constraint firstItem="d5t-eA-5Kc" firstAttribute="leading" secondItem="kQ6-aC-Yic" secondAttribute="leading" constant="20" id="kfT-DT-NW8"/>
                         <constraint firstItem="W4l-6w-mE1" firstAttribute="leading" secondItem="nwx-2V-2ho" secondAttribute="trailing" constant="10" id="pdn-V1-TRV"/>
-                        <constraint firstItem="nwx-2V-2ho" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="10" id="tkf-Br-SER"/>
+                        <constraint firstItem="nwx-2V-2ho" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="20" id="tkf-Br-SER"/>
                         <constraint firstItem="d5t-eA-5Kc" firstAttribute="top" relation="greaterThanOrEqual" secondItem="nwx-2V-2ho" secondAttribute="bottom" constant="10" id="wYt-4a-iNu"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.98039215690000003" green="0.44705882349999998" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Sfb-hn-OPa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="3nb-k3-gtE"/>
                 <constraint firstItem="chP-4o-a0U" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="5ag-HX-cdg"/>
@@ -186,7 +186,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="52.799999999999997" y="21.139430284857571"/>
+            <point key="canvasLocation" x="52.799999999999997" y="25.637181409295355"/>
         </view>
     </objects>
     <resources>
