--- a/fitsmeright/Resources/Layouts/V/PostView.xib
+++ b/fitsmeright/Resources/Layouts/V/PostView.xib
@@ -42,11 +42,13 @@
                                 <constraint firstAttribute="height" constant="44" id="tUe-bH-hoc"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" image="ic_like"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0u-VE-Bjy">
                             <rect key="frame" x="64" y="0.0" width="44" height="44"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" image="ic_comment"/>
                         </button>
                         <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwJ-ZR-nVh">
                             <rect key="frame" x="128" y="0.0" width="44" height="44"/>
@@ -86,16 +88,16 @@
                         <constraint firstAttribute="height" constant="30" id="zSI-JX-85z"/>
                     </constraints>
                 </stackView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fua-Nd-Wvc" customClass="CreateTextView" customModule="fitsmeright" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="135" width="400" height="400"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMA-Ef-T7Q" customClass="CreatePostView" customModule="fitsmeright" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="135" width="400" height="400"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="KMA-Ef-T7Q" secondAttribute="height" multiplier="1:1" id="wzX-FC-Sh5"/>
                     </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fua-Nd-Wvc" customClass="CreateTextView" customModule="fitsmeright" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="135" width="400" height="400"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kQ6-aC-Yic" userLabel="Info Container View">
                     <rect key="frame" x="0.0" y="0.0" width="400" height="135"/>
@@ -116,7 +118,7 @@
                                 <constraint firstAttribute="height" constant="35" id="ZdL-6j-NIW"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <state key="normal" title=":"/>
+                            <state key="normal" image="ic_more"/>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nwx-2V-2ho">
                             <rect key="frame" x="100" y="20" width="235" height="70"/>
@@ -190,6 +192,9 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_comment" width="24" height="24"/>
+        <image name="ic_like" width="24" height="24"/>
+        <image name="ic_more" width="24" height="24"/>
         <image name="ic_share" width="24" height="24"/>
     </resources>
 </document>
