--- a/fitsmeright/Resources/Layouts/V/PostView.xib
+++ b/fitsmeright/Resources/Layouts/V/PostView.xib
@@ -112,7 +112,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W4l-6w-mE1">
-                            <rect key="frame" x="345" y="20" width="35" height="35"/>
+                            <rect key="frame" x="365" y="20" width="35" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="W4l-6w-mE1" secondAttribute="height" multiplier="1:1" id="JZq-Yf-wVb"/>
                                 <constraint firstAttribute="height" constant="35" id="ZdL-6j-NIW"/>
@@ -121,16 +121,16 @@
                             <state key="normal" image="ic_more"/>
                         </button>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nwx-2V-2ho">
-                            <rect key="frame" x="100" y="20" width="235" height="70"/>
+                            <rect key="frame" x="100" y="20" width="255" height="70"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLw-lL-kjE">
-                                    <rect key="frame" x="0.0" y="0.0" width="235" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="255" height="50"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="slQ-DV-1FW">
-                                    <rect key="frame" x="0.0" y="60" width="235" height="10"/>
+                                    <rect key="frame" x="0.0" y="60" width="255" height="10"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -149,7 +149,7 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="W4l-6w-mE1" secondAttribute="trailing" constant="20" id="9Mg-Fd-STa"/>
+                        <constraint firstAttribute="trailing" secondItem="W4l-6w-mE1" secondAttribute="trailing" id="9Mg-Fd-STa"/>
                         <constraint firstItem="kEC-Tw-UZa" firstAttribute="leading" secondItem="kQ6-aC-Yic" secondAttribute="leading" constant="20" id="G9e-Zt-M8I"/>
                         <constraint firstAttribute="bottom" secondItem="d5t-eA-5Kc" secondAttribute="bottom" constant="10" id="Mm0-JE-1N1"/>
                         <constraint firstItem="kEC-Tw-UZa" firstAttribute="top" secondItem="kQ6-aC-Yic" secondAttribute="top" constant="20" id="Mww-3i-KqM"/>
